--- a/app/assets/stylesheets/_side-barMypage.scss
+++ b/app/assets/stylesheets/_side-barMypage.scss
@@ -1,4 +1,5 @@
 .body{
+  float:left;
   position: relative;
   background: #f5f5f5;
   font-size: 14px;
@@ -49,5 +50,13 @@
     position: absolute;
     left: 250px;
   }
+  }
+}
+@media screen and (max-width: 1090px){
+  .side-barMypage{
+    display: none;
+  }
+  .info_contents{
+    width: 100%;
   }
 }
