--- a/app/assets/stylesheets/user_info_register.scss
+++ b/app/assets/stylesheets/user_info_register.scss
@@ -1,115 +1,237 @@
-@media screen and (min-width: 1035px){
 .user_info_register{
   margin: 25px;
-
-
-.both-content{
-
-  .info_contents{
-    width: 700px;
-    float:right;
-    background-color: #fff;
-    margin-top: 24px;
-    .chapter-head{
-      padding: 8px 24px;
-      text-align: center;
-      border-bottom: 1px solid #f5f5f5;
-    }
-    .single-inner{
-      padding: 64px;
-      .info_content{
-        margin: 8px 0 0;
-        line-height: 1.5;
+  height:300vh;
+  .both-content{
+    display:inline-block;
+    position: relative;
+    .info_contents{
+      width: 700px;
+      float:right;
+      background-color: #fff;
+      .chapter-head{
+        padding: 8px 24px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 24px;
+        border-bottom: 1px solid #f5f5f5;
       }
-      .text-right{
-        text-align: right;
-        .link{
-          color: #0099e8;
-          text-decoration: none;
+      .single-inner{
+        padding: 64px;
+        .info_content{
+          margin: 8px 0 0;
+          line-height: 1.5;
+        }
+          .text-right{
+            text-align: right;
+            margin: 40px 0 0;
+            .link{
+              color: #0099e8;
+              text-decoration: none;
+            }
+          }
+        .form-group{
+          margin: 40px 0 0;
+          font-weight: 600;
+          .name{
+            display: inline-block;
+          }
+          .form-require{
+            background: #ea352d;
+            padding: 2px 4px;
+            border-radius: 2px;
+            color: #fff;
+            font-size: 12px;
+            vertical-align: top;
+            margin: 0 0 0 8px;
+          }
+          .input-default{
+            font-weight: normal;
+            display: block;
+            width: 100%;
+            padding: 10px 16px 8px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            background: #fff;
+            line-height: 1.5;
+            font-size: 16px;
+            margin-top: 8px;
+            }
+      }
+              .select-default{
+                height: 48px;
+                width: 76px;
+                background-color: #fff;
+              }
+      span{
+        margin: 0 2px;
+        left: 100px;
+      }
+      .info_link{
+
+        color: #0099e8;
+        text-decoration: none;
         }
       }
-    .form-group{
-      margin: 40px 0 0;
-      font-weight: 600;
-      .name{
-        display: inline-block;
+      .form-info-text{
+        font-weight: none;
+        margin: 8px 0 0;
+        color: #888;
+        font-size: 15px;
       }
-    .form-require{
-      background: #ea352d;
-      padding: 2px 4px;
-      border-radius: 2px;
-      color: #fff;
-      font-size: 12px;
-      vertical-align: top;
-      margin: 0 0 0 8px;
-    }
-    .input-default{
-      display: block;
-      width: 100%;
-      padding: 10px 16px 8px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      background: #fff;
-      line-height: 1.5;
-      font-size: 16px;
-      margin-top: 8px;
+      .form-arbitrary{
+        background: #ccc;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
       }
-    }
-    .select-default{
-      height: 48px;
-      width: 76px;
-    }
-    span{
-      margin: 0 2px;
-      left: 100px;
-    }
-    }
-    .form-info-text{
-      font-weight: none;
-      margin: 8px 0 0;
-      color: #888;
-      font-size: 15px;
-    }
-    .form-arbitrary{
-      background: #ccc;
-      margin: 0 0 0 8px;
-      padding: 2px 4px;
-      border-radius: 2px;
-      color: #fff;
-      font-size: 12px;
-    }
-    .form-group{
-      width: 100%;
-    }
-      .select-wrap{
-        background-color: #fff;
+        .select-wrap{
+          background-color: #fff;
+        }
+
+      .btn-default.btn-red{
+        margin: 40px 0 0 0;
+        background: #ea352d;
+        border: 1px solid #ea352d;
+        color: #fff;
+        display: block;
+        width: 608px;
+        line-height: 48px;
+        font-size: 14px;
+        border: 1px solid transparent;
+        -webkit-transition: all ease-out .3s;
+        transition: all ease-out .3s;
+        text-align: center;
       }
-    .btn-default.btn-red{
-      margin: 40px 0 0 0;
-      background: #ea352d;
-      border: 1px solid #ea352d;
-      color: #fff;
-      display: block;
-      width: 608px;
-      line-height: 48px;
-      font-size: 14px;
-      border: 1px solid transparent;
-      -webkit-transition: all ease-out .3s;
-      transition: all ease-out .3s;
-      text-align: center;
-    }
-    .register{
-      text-align: right;
-      color: #0099e8;
-      text-decoration: none;
+      .register{
+        text-align: right;
+        color: #0099e8;
+        text-decoration: none;
+      }
     }
   }
-  .clearfix::after {
-    content: "";
-    clear: both;
-    display: block;
+  }
+
+
+@media screen and (max-width:1100px){
+.user_info_register{
+  margin: 25px;
+  height:700vh;
+  .both-content{
+    .info_contents{
+      width: 700px;
+      float:left;
+      background-color: #fff;
+      .chapter-head{
+        padding: 8px 24px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 24px;
+        border-bottom: 1px solid #f5f5f5;
+      }
+      .single-inner{
+        padding: 64px;
+        .info_content{
+          margin: 8px 0 0;
+          line-height: 1.5;
+        }
+          .text-right{
+            text-align: right;
+            margin: 40px 0 0;
+            .link{
+              color: #0099e8;
+              text-decoration: none;
+            }
+          }
+        .form-group{
+          margin: 40px 0 0;
+          font-weight: 600;
+          .name{
+            display: inline-block;
+          }
+          .form-require{
+            background: #ea352d;
+            padding: 2px 4px;
+            border-radius: 2px;
+            color: #fff;
+            font-size: 12px;
+            vertical-align: top;
+            margin: 0 0 0 8px;
+          }
+          .input-default{
+            font-weight: normal;
+            display: block;
+            width: 100%;
+            padding: 10px 16px 8px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            background: #fff;
+            line-height: 1.5;
+            font-size: 16px;
+            margin-top: 8px;
+            }
+      }
+              .select-default{
+                height: 48px;
+                width: 76px;
+                background-color: #fff;
+              }
+      span{
+        margin: 0 2px;
+        left: 100px;
+      }
+      .info_link{
+
+        color: #0099e8;
+        text-decoration: none;
+        }
+      }
+      .form-info-text{
+        font-weight: none;
+        margin: 8px 0 0;
+        color: #888;
+        font-size: 15px;
+      }
+      .form-arbitrary{
+        background: #ccc;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
+      }
+        .select-wrap{
+          background-color: #fff;
+        }
+
+      .btn-default.btn-red{
+        margin: 40px 0 0 0;
+        background: #ea352d;
+        border: 1px solid #ea352d;
+        color: #fff;
+        display: block;
+        width: 608px;
+        line-height: 48px;
+        font-size: 14px;
+        border: 1px solid transparent;
+        -webkit-transition: all ease-out .3s;
+        transition: all ease-out .3s;
+        text-align: center;
+      }
+      .register{
+        text-align: right;
+        color: #0099e8;
+        text-decoration: none;
+      }
+    }
+  }
+  .body{
+    margin-top:40px;
+    width: 700px;
+    .side-bar-box{
+      width:650px;
+  }
   }
 }
 }
-}
-@media screen and (max-width: 1035px){}
