--- a/app/assets/stylesheets/_side-barMypage.scss
+++ b/app/assets/stylesheets/_side-barMypage.scss
@@ -52,6 +52,65 @@
   }
   }
 }
+
+
+@media screen and (max-width:1100px){
+.body{
+  margin-top:40px;
+  width: 700px;
+  float:left;
+  position: relative;
+  background: #f5f5f5;
+  font-size: 14px;
+  color: #333;
+  .side-bar-box{
+    position:relative;
+    border-top: 1px solid #eee;
+    width:650px;
+    margin: 0 40px 0 0;
+    left:20px;
+    ul{
+      margin: 0;
+      padding: 0;
+      li{
+        border-bottom:solid 1px #EEEEEE;
+        position: relative;
+        display: flex;
+        min-height: 28px;
+        padding: 16px;
+        background: #fff;
+        font-size: 14px;
+        color: #333;
+        line-height: 28px;
+        cursor: pointer;
+      }
+      li:hover{
+        background-color: #f5f5f5f5;
+        .icon{
+          color:black;
+          left: 257px;
+          transition: 0.5s ;
+        }
+      }
+      li:active{
+        background-color: #dddddd;
+        font-weight: 600;
+      }
+    }
+  h3{
+    margin: 40px 0 0;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  .icon{
+    display: block;
+    color: #dddddd;
+    width:20px;
+    position: absolute;
+    left: 250px;
+  }
+  }
+}
 @media screen and (max-width: 1090px){
   .side-barMypage{
     display: none;
@@ -59,4 +118,5 @@
   .info_contents{
     width: 100%;
   }
+}
 }
