--- a/app/assets/stylesheets/user_info_register.scss
+++ b/app/assets/stylesheets/user_info_register.scss
@@ -8,7 +8,7 @@
       width: 700px;
       float:right;
       background-color: #fff;
-      .chapter-head{
+      &__head{
         padding: 8px 24px;
         text-align: center;
         font-weight: bold;
