--- a/app/views/mypage/user_info_register.haml
+++ b/app/views/mypage/user_info_register.haml
@@ -1,7 +1,7 @@
 .user_info_register
   .both-content
     .info_contents
-      %h2.chapter-head 本人情報の登録
+      %h2.info_contents__head 本人情報の登録
       %form.single-inner{action: "https://www.mercari.com/jp/mypage/identification/save/", method: "POST", novalidate: ""}
         .info_content
           %p
