--- a/app/assets/stylesheets/_header_footer.scss
+++ b/app/assets/stylesheets/_header_footer.scss
@@ -7,14 +7,14 @@
     overflow: scroll;
     .header{
       height: 130px;
-      &__logo{
+      .header-logo{
         margin: 0 auto;
         width:182px;
         padding: 40px 0 0;
         cursor: pointer;
         margin: 0 auto;
       }
-      &__logo:hover{
+      .header-logo:hover{
         opacity: 0.7;
       }
     }
@@ -93,7 +93,7 @@
     overflow: scroll;
     .header{
       height: 56px;
-      &__logo{
+      .header-logo{
         margin: 0 auto;
         width:120px;
         height: 33px;
@@ -102,12 +102,12 @@
         position: relative;
         top:11.5px;
       }
-      &__logo:hover{
+      .header-logo:hover{
         opacity: 0.7;
       }
     }
     .body-foot{
-      margin:108px auto 0;
+      margin:0 auto;
       width: 700px;
       max-width: 50%;
       height: 170px;
