--- a/app/assets/stylesheets/signup3.scss
+++ b/app/assets/stylesheets/signup3.scss
@@ -9,6 +9,7 @@
     line-height: 1.5;
     .tell-box{
       width: 700px;
+      max-width: 100%;
       height: 498px;
       margin: 0 auto;
       background-color: white;
@@ -100,7 +101,89 @@
     font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
     font-size: 14px;
     color: #333;
-    line-height: 1;
-    
+    line-height: 1.5;
+    .tell-box{
+      max-width: 100%;
+      margin: 0 auto;
+      background-color: white;
+      &__title{
+        display: block;
+        height: 58px;
+        border-bottom:1px solid #eee;
+        h1{
+          line-height: 58px;
+          font-size: 18px;
+          font-weight: bolder;
+          text-align: center;
+        }
+      }
+      &__body{
+          height: 357px;
+        .push-box{
+          padding: 6px 16px 40px;
+          form{
+            .formbox{
+              width: 343px;
+              margin:0 auto;
+              .form-group{
+                padding: 22px 0;
+                label{
+                  font-weight: 600;
+                }
+                p{
+                  padding: 5px 0;
+                  line-height: 1.5;
+                }
+                input{
+                  box-sizing: border-box;
+                  padding: 10px 16px 8px;
+                  border-radius: 4px;
+                  border: 1px solid #ccc;
+                  background: #fff;
+                  line-height: 1.5;
+                  font-size: 16px;
+                  width: 343px;
+                  margin: 8px 0 0;
+                }
+                .input-parrent{
+                  display: flex;
+                  input{
+                    width: 165.5px;
+                    margin-right: 8px;
+                  }
+                }
+              }
+              .go-ahead{
+                background-color: #ea352d;
+                color: white;
+                width: 343px;
+                height: 50px;
+                font-size: 14px;
+                cursor: pointer;
+              }
+              .go-ahead:hover{
+                background-color: rgb(221, 16, 16);
+                transition: 1.0s;
+              }
+              p{
+                padding: 5px 0;
+                line-height: 1.5;
+              }
+              .link-for-user-info{
+                color: rgb(0, 162, 255);
+                text-decoration:none;
+                float: right;
+                margin-top:20px;
+              }
+              .link-for-user-info:hover{
+                text-decoration:underline;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
+
+
