コメント修正

--- a/app/views/pay-confirm/_paypay.html.haml
+++ b/app/views/pay-confirm/_paypay.html.haml
@@ -36,7 +36,7 @@
                     .breakdown お買い上げ金額
                     .breakdown
                       %span{"value":"15000"} ¥15,000
-                -# %input{name: "seller_id", type: "hidden", value: "722674558"}/仮置き
+                %input{name: "seller_id", type: "hidden", value: "722674558"}/
 
           %section.pay-user-info
             .pay-content-info
@@ -46,7 +46,6 @@
               %p.user-info-text
               = link_to "変更する >", "", class: "user-info-fix"
               .dammy
-                -# %i.fas.fa-arrow-circle-right仮置き
           %section.pay-user-info
             .pay-content-info
               %h3 支払い方法
@@ -56,7 +55,6 @@
               %p
               = link_to "変更する >", "#", class: "user-info-fix"
               .dammy
-                -# %i.fas.fa-arrow-circle-right仮置き
       %footer.pain-footer
         %nav
           %ul.script
