--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,9 +43,9 @@
           .top-main-leg__right
             %ul.user-nav
               %li
-                = link_to "新規会員登録", "https://www.mercari.com/jp/signup/", class: "new-acount"
+                = link_to "新規会員登録", new_user_registration_path, class: "new-acount"
               %li
-                = link_to "ログイン", "https://www.mercari.com/jp/login/?login_callback=https%3A%2F%2Fwww.mercari.com%2Fjp%2Ffeatured%2Fcamp%2F", class: "login-acount"
+                = link_to "ログイン", new_user_session_path, class: "login-acount"
     = yield
     .footer
       .upper-footer
