--- a/app/assets/stylesheets/_paypay.scss
+++ b/app/assets/stylesheets/_paypay.scss
@@ -72,7 +72,7 @@
                 display: inline-block;
               }
               // span.method-of-payment {
-              // }
+              // }これは必要なコメントです
             }
             ul.pay-point {
               background-color: gray;
