--- a/app/views/pay-confirm/_paypay.html.haml
+++ b/app/views/pay-confirm/_paypay.html.haml
@@ -14,13 +14,13 @@
             %form.pay-form
               %p.pay-price 
                 ¥1,500
-                -# %span.method-of-payment必要なコメントアウト
+                -# %span.method-of-paymentこの先の実装で必要なのでコメントアウト
                 %span.mop
                   着払い
               %ul.pay-point
                 %li.point-many
                   .point-text ポイント is empty
-              -# if you don't have point then this action必要なコメントアウト
+              -# if you don't have point then this actionこの先の実装で必要なのでコメントアウト
               -# %ul.pay-point have
               -#   %li.point-many
               -#     .point-text
