--- a/app/assets/stylesheets/signup5.scss
+++ b/app/assets/stylesheets/signup5.scss
@@ -7,10 +7,10 @@
     font-size: 14px;
     color: #333;
     line-height: 1.5;
-    .addless-box{
+    .credit-box{
       width: 700px;
       max-width: 100%;
-      height: 1150px;
+      height: 562px;
       margin: 0 auto;
       background-color: white;
       &__title{
@@ -25,15 +25,15 @@
         }
       }
       &__body{
-        height: 1055px;
+        height: 467px;
         .push-box{
           form{
             padding: 20px 40px 64px;
             .formbox{
               width: 343px;
               margin:0 auto;
-              .form-group{
-                padding: 22px 0;
+              .form-group-credit{
+                padding: 10px 0;
                 label{
                   font-weight: 600;
                 }
@@ -64,26 +64,29 @@
                   width: 343px;
                   margin: 8px 0 0;
                 }
-                select.prefectures{
-                  box-sizing: border-box;
-                  padding: 10px 16px 8px;
-                  border-radius: 4px;
-                  border: 1px solid #ccc;
-                  line-height: 1.5;
-                  font-size: 16px;
-                  width: 343px;
-                  margin: 8px 0 0;
-                  cursor: pointer;
-                  -webkit-appearance: none;
-                  -moz-appearance: none;
-                  appearance: none;
-                  padding-left: 15px;
-                  height: 48px;
-                  background-image:url("SVG/chevron-down-solid.svg");
-                  background-repeat: no-repeat;
-                  background-size: 16px 30px;
-                  background-position: right 10px center;
-                  background-color: white;
+                .select-parrent{
+                  display:flex;
+                  select{
+                    width:76px;
+                    height: 48px;
+                    margin-top:8px;
+                    background-color:transparent;
+                    border-color: #ccc;
+                    border-radius: 3px;
+                    cursor: pointer;
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    appearance: none;
+                    padding-left: 15px;
+                    height: 48px;
+                    background-image:url("SVG/chevron-down-solid.svg");
+                    background-repeat: no-repeat;
+                    background-size: 16px 30px;
+                    background-position: right 10px center;
+                  }
+                    p{
+                      line-height: 48px;
+                    }
                 }
                 .input-parrent{
                   display: flex;
@@ -137,30 +140,33 @@
     font-size: 14px;
     color: #333;
     line-height: 1.5;
-    .addless-box{
+    .credit-box{
+      width: 700px;
       max-width: 100%;
+      height: 562px;
       margin: 0 auto;
       background-color: white;
       &__title{
         display: block;
         height: 58px;
-        border-bottom:1px solid #eee;
+        border-bottom:1.5px solid #f5f5f5;
         h2{
           line-height: 58px;
-          font-size: 18px;
+          font-size: 22px;
           font-weight: bolder;
           text-align: center;
         }
       }
       &__body{
+        height: 467px;
         .push-box{
-          padding: 6px 16px 40px;
           form{
+            padding: 20px 40px 64px;
             .formbox{
               width: 343px;
               margin:0 auto;
-              .form-group{
-                padding: 22px 0;
+              .form-group-credit{
+                padding: 10px 0;
                 label{
                   font-weight: 600;
                 }
@@ -177,7 +183,7 @@
                   border-radius: 2px;
                 }
                 p{
-                  padding: 5px 0;
+                  padding: 10px 0;
                   line-height: 1.5;
                 }
                 input{
@@ -191,26 +197,29 @@
                   width: 343px;
                   margin: 8px 0 0;
                 }
-                select.prefectures{
-                  box-sizing: border-box;
-                  padding: 10px 16px 8px;
-                  border-radius: 4px;
-                  border: 1px solid #ccc;
-                  line-height: 1.5;
-                  font-size: 16px;
-                  width: 343px;
-                  margin: 8px 0 0;
-                  cursor: pointer;
-                  -webkit-appearance: none;
-                  -moz-appearance: none;
-                  appearance: none;
-                  padding-left: 15px;
-                  height: 48px;
-                  background-image:url("SVG/chevron-down-solid.svg");
-                  background-repeat: no-repeat;
-                  background-size: 16px 30px;
-                  background-position: right 10px center;
-                  background-color: white;
+                .select-parrent{
+                  display:flex;
+                  select{
+                    width:76px;
+                    height: 48px;
+                    margin-top:8px;
+                    background-color:transparent;
+                    border-color: #ccc;
+                    border-radius: 3px;
+                    cursor: pointer;
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    appearance: none;
+                    padding-left: 15px;
+                    height: 48px;
+                    background-image:url("SVG/chevron-down-solid.svg");
+                    background-repeat: no-repeat;
+                    background-size: 16px 30px;
+                    background-position: right 10px center;
+                  }
+                    p{
+                      line-height: 48px;
+                    }
                 }
                 .input-parrent{
                   display: flex;
@@ -221,7 +230,7 @@
                 }
               }
               .go-ahead{
-                margin-top: 10px;
+                margin-top: 30px;
                 background-color: #ea352d;
                 color: white;
                 width: 343px;
@@ -234,7 +243,7 @@
                 transition: 1.0s;
               }
               p{
-                padding: 5px 0;
+                padding: 10px 0;
                 line-height: 1.5;
               }
               .link-for-user-info{
