--- a/app/views/user-login-signup/signup3.html.haml
+++ b/app/views/user-login-signup/signup3.html.haml
@@ -1,5 +1,26 @@
 .body
-  =render "header-signupBar"
+  .signup-header
+    .signup-header__box
+      .signup-header-logo
+        =link_to '' do
+          =image_tag 'SVG/fmarket_logo_red.svg'
+      %nav.signupBar
+        %ol.signupList
+          %li.signupInfo.marker
+            会員情報
+            .mark
+          %li.signupTell.marker.now-point
+            電話番号認証
+            .mark
+          %li.signupAdd
+            お届け先住所入力
+            .mark
+          %li.signupHowToPay
+            支払い方法
+            .mark
+          %li.signupComplete
+            完了
+            .mark
   .tell-box
     .tell-box__title
       %h2 電話番号の確認
