--- a/app/views/user-login-signup/signup2.html.haml
+++ b/app/views/user-login-signup/signup2.html.haml
@@ -1,3 +1,4 @@
+/headerは、js導入時に追加するクラス名と場所をわかりやすくするために現時点では部分テンプレートにしていません。
 .body
   .signup-header
     .signup-header__box
@@ -7,6 +8,7 @@
       %nav.signupBar
         %ol.signupList
           %li.signupInfo.marker.now-point
+          
             会員情報
             .mark
           %li.signupTell
