プロフィール編集画面
# what
プロフィール編集画面view実装

# why
userテーブルのprofileカラムをeditするview画面として

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,7 @@
 @import "header";
 @import "footer";
 @import "home";
+@import "profile";
 @import "side-barMypage";
 @import "user_info_register";
+@import "clearfix";
