--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -9,7 +9,7 @@
       float:right;
       padding: 40px 16px;
       background-color: #fff;
-      .profile-main__contents__head{
+      &__head{
         font-size: 24px;
         font-weight: bold;
         text-align: center;
@@ -65,7 +65,6 @@
     }
   }
 }
-
 @media screen and (max-width:1140px){
   .profile-main{
     height: 568px;
