--- a/app/views/user-login-signup/signup4.html.haml
+++ b/app/views/user-login-signup/signup4.html.haml
@@ -82,5 +82,5 @@
                 任意
               %input.tellNum-info{placeholder: "09012345678", value: ""}/
             =link_to"" do
-              =f.button "次へ進む", class: "go-ahead"
+              =f.button "次へ進む", class: "go-ahead4"
   =render "footer-login"
