--- a/app/assets/stylesheets/_header-signupBar.scss
+++ b/app/assets/stylesheets/_header-signupBar.scss
@@ -1,12 +1,6 @@
 @media screen and (min-width: 768px){
   .body{
-    background: #f5f5f5;
-    font-size: 14px;
-    color: #333;
-    line-height: 1;
-    overflow: scroll;
-    min-height: 100%;
-    font-family: 'Source Sans Pro', Helvetica , Arial, 'æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“', 'YuGothic', 'ãƒ¡ã‚¤ãƒªã‚ª', 'Meiryo', sans-serif;
+    @include bodyTemp;
     .signup-header{
       height: 130px;
       display: flex;
@@ -20,9 +14,9 @@
           padding: 40px 0 0 0;
           min-width:182px;
           cursor: pointer;
-        }
-        .signup-header-logo:hover{
-          opacity: 0.7;
+          &:hover{
+            opacity: 0.7;
+          }
         }
         nav.signupBar{
           max-width: 100%;
@@ -105,13 +99,7 @@
 
 @media screen and (max-width: 768px){
   .body{
-    background: #f5f5f5;
-    font-size: 14px;
-    color: #333;
-    line-height: 1;
-    overflow: scroll;
-    min-height: 100%;
-    font-family: 'Source Sans Pro', Helvetica , Arial, 'æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“', 'YuGothic', 'ãƒ¡ã‚¤ãƒªã‚ª', 'Meiryo', sans-serif;
+    @include bodyTemp;
     .signup-header{
       height: 121px;
       text-align: center;
@@ -125,9 +113,9 @@
           max-width:100%;
           height: 33px;
           margin: 16px auto;
-        }
-        .signup-header-logo:hover{
-          opacity: 0.7;
+          &:hover{
+            opacity: 0.7;
+          }
         }
         nav.signupBar{
           max-width: 100%;
