--- a/app/assets/stylesheets/_header_footer.scss
+++ b/app/assets/stylesheets/_header_footer.scss
@@ -1,10 +1,6 @@
 @media screen and (min-width: 768px){
   .body{
-    background: #f5f5f5;
-    font-size: 14px;
-    color: #333;
-    line-height: 1;
-    overflow: scroll;
+    @include bodyTemp();
     .header{
       height: 130px;
       .header-logo{
@@ -86,11 +82,7 @@
 
 @media screen and (max-width: 768px){
   .body{
-    background: #f5f5f5;
-    font-size: 14px;
-    color: #333;
-    line-height: 1;
-    overflow: scroll;
+    @include bodyTemp();
     .header{
       height: 56px;
       .header-logo{
