--- a/app/assets/stylesheets/signup2.scss
+++ b/app/assets/stylesheets/signup2.scss
@@ -1,12 +1,6 @@
 @media screen and (min-width: 768px){
   .body{
-    position: relative;
-    min-height: 100%;
-    background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-    font-size: 14px;
-    color: #333;
-    line-height: 1;
+    @include bodyTemp;
     .push-info{
       width: 700px;
       height: 100%;
@@ -33,21 +27,10 @@
               font-weight: 600;
             }
             span{
-              background: #ea352d;
-              color: white;
-              padding: 2px;
-              border-radius: 2px;
+              @include mustDesign;
             }
             input{
-              box-sizing: border-box;
-              padding: 10px 16px 8px;
-              border-radius: 4px;
-              border: 1px solid #ccc;
-              background: #fff;
-              line-height: 1.5;
-              font-size: 16px;
-              width: 343px;
-              margin: 8px 0 0;
+              @include inputTemp;
             }
             .input-parrent{
               display: flex;
@@ -81,19 +64,7 @@
                   width:76px;
                   height: 48px;
                   margin-top:8px;
-                  background-color:transparent;
-                  border-color: #ccc;
-                  border-radius: 3px;
-                  cursor: pointer;
-                  -webkit-appearance: none;
-                  -moz-appearance: none;
-                  appearance: none;
-                  padding-left: 15px;
-                  height: 48px;
-                  background-image:url("SVG/chevron-down-solid.svg");
-                  background-repeat: no-repeat;
-                  background-size: 16px 30px;
-                  background-position: right 10px center;
+                  @include selectType;
                 }
               }
                 p{
@@ -116,23 +87,12 @@
             margin: 30px 0;
           }
           .go-ahead{
-            background-color: #ea352d;
-            color: white;
-            width: 343px;
-            height: 50px;
             margin-top:30px;
-            font-size: 14px;
-            cursor: pointer;
-          }
-          .go-ahead:hover{
-              background-color: rgb(221, 16, 16);
-              transition: 1.0s;
+            @include submit-btn;
+          
           }
           .link-for-user-info{
-            color: skyblue;
-            text-decoration:none;
-            float: right;
-            margin-top:20px;
+            @include blue-line;
           }
         }
       }
@@ -143,21 +103,15 @@
 
 @media screen and (max-width: 768px){
   .body{
-    position: relative;
-    min-height: 100%;
-    background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-    font-size: 14px;
-    color: #333;
-    line-height: 1;
+    @include bodyTemp;
     .push-info{
       max-width: 100%;
       height: 100%;
       background-color: white;
       margin: 0 auto;
       .info-top{
-        line-height: 97px;
-        font-size: 22px;
+        line-height: 58px;
+        font-size: 18px;
         border-bottom: 1px solid #f5f5f5;
         h2{
           text-align: center;
@@ -177,21 +131,10 @@
               font-weight: 600;
             }
             span{
-              background: #ea352d;
-              color: white;
-              padding: 2px;
-              border-radius: 2px;
+              @include mustDesign;
             }
             input{
-              box-sizing: border-box;
-              padding: 10px 16px 8px;
-              border-radius: 4px;
-              border: 1px solid #ccc;
-              background: #fff;
-              line-height: 1.5;
-              font-size: 16px;
-              width: 343px;
-              margin: 8px 0 0;
+              @include inputTemp;
             }
             .input-parrent{
               display: flex;
@@ -225,20 +168,7 @@
                   width:76px;
                   height: 48px;
                   margin-top:8px;
-                  background-color:transparent;
-                  border-color: #ccc;
-                  border-radius: 3px;
-                  cursor: pointer;
-                  -webkit-appearance: none;
-                  -moz-appearance: none;
-                  appearance: none;
-                  padding-left: 15px;
-                  height: 48px;
-                  background-image:url("SVG/chevron-down-solid.svg");
-                  background-repeat: no-repeat;
-                  background-size: 16px 30px;
-                  background-position: right 10px center;
-  
+                  @include slectType;
                 }
               }
                 p{
@@ -261,23 +191,11 @@
             margin: 30px 0;
           }
           .go-ahead{
-            background-color: #ea352d;
-            color: white;
-            width: 343px;
-            height: 50px;
             margin-top:30px;
-            font-size: 14px;
-            cursor: pointer;
-          }
-          .go-ahead:hover{
-              background-color: rgb(221, 16, 16);
-              transition: 1.0s;
+            @include submit-btn;
           }
           .link-for-user-info{
-            color: skyblue;
-            text-decoration:none;
-            float: right;
-            margin-top:20px;
+            @include blue-line;
           }
         }
       }
