--- a/app/assets/stylesheets/signup3.scss
+++ b/app/assets/stylesheets/signup3.scss
@@ -1,12 +1,6 @@
 @media screen and (min-width: 768px){
   .body{
-    position: relative;
-    min-height: 100%;
-    background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-    font-size: 14px;
-    color: #333;
-    line-height: 1.5;
+    @include bodyTemp;
     .tell-box{
       width: 700px;
       max-width: 100%;
@@ -17,7 +11,7 @@
         display: block;
         height: 95px;
         border-bottom:1px solid #eee;
-        h1{
+        h2{
           line-height: 95px;
           font-size: 22px;
           font-weight: bolder;
@@ -41,15 +35,7 @@
                   line-height: 1.5;
                 }
                 input{
-                  box-sizing: border-box;
-                  padding: 10px 16px 8px;
-                  border-radius: 4px;
-                  border: 1px solid #ccc;
-                  background: #fff;
-                  line-height: 1.5;
-                  font-size: 16px;
-                  width: 343px;
-                  margin: 8px 0 0;
+                  @include inputTemp;
                 }
                 .input-parrent{
                   display: flex;
@@ -60,29 +46,14 @@
                 }
               }
               .go-ahead{
-                background-color: #ea352d;
-                color: white;
-                width: 343px;
-                height: 50px;
-                font-size: 14px;
-                cursor: pointer;
-              }
-              .go-ahead:hover{
-                background-color: rgb(221, 16, 16);
-                transition: 1.0s;
+                @include submit-btn;
               }
               p{
                 padding: 10px 0;
                 line-height: 1.5;
               }
               .link-for-user-info{
-                color: rgb(0, 162, 255);
-                text-decoration:none;
-                float: right;
-                margin-top:20px;
-              }
-              .link-for-user-info:hover{
-                text-decoration:underline;
+                @include blue-line;
               }
             }
           }
@@ -95,13 +66,7 @@
 
 @media screen and (max-width: 768px){
   .body{
-    position: relative;
-    min-height: 100%;
-    background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-    font-size: 14px;
-    color: #333;
-    line-height: 1.5;
+    @include bodyTemp;
     .tell-box{
       max-width: 100%;
       margin: 0 auto;
@@ -110,7 +75,7 @@
         display: block;
         height: 58px;
         border-bottom:1px solid #eee;
-        h1{
+        h2{
           line-height: 58px;
           font-size: 18px;
           font-weight: bolder;
@@ -135,15 +100,7 @@
                   line-height: 1.5;
                 }
                 input{
-                  box-sizing: border-box;
-                  padding: 10px 16px 8px;
-                  border-radius: 4px;
-                  border: 1px solid #ccc;
-                  background: #fff;
-                  line-height: 1.5;
-                  font-size: 16px;
-                  width: 343px;
-                  margin: 8px 0 0;
+                  @include inputTemp;
                 }
                 .input-parrent{
                   display: flex;
@@ -154,26 +111,14 @@
                 }
               }
               .go-ahead{
-                background-color: #ea352d;
-                color: white;
-                width: 343px;
-                height: 50px;
-                font-size: 14px;
-                cursor: pointer;
-              }
-              .go-ahead:hover{
-                background-color: rgb(221, 16, 16);
-                transition: 1.0s;
+                @include submit-btn;
               }
               p{
                 padding: 5px 0;
                 line-height: 1.5;
               }
               .link-for-user-info{
-                color: rgb(0, 162, 255);
-                text-decoration:none;
-                float: right;
-                margin-top:20px;
+                @include blue-line;
               }
               .link-for-user-info:hover{
                 text-decoration:underline;
