--- a/app/assets/stylesheets/signup6.scss
+++ b/app/assets/stylesheets/signup6.scss
@@ -1,12 +1,6 @@
 @media screen and (min-width: 768px){
   .body{
-    position: relative;
-    min-height: 100%;
-    background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-    font-size: 14px;
-    color: #333;
-    line-height: 1.5;
+    @include bodyTemp();
     .last-box{
       height: 438px;
       width: 700px;
@@ -39,16 +33,7 @@
             }
             .go-ahead{
               margin-top: 30px;
-              background-color: #ea352d;
-              color: white;
-              width: 343px;
-              height: 50px;
-              font-size: 14px;
-              cursor: pointer;
-            }
-            .go-ahead:hover{
-              background-color: rgb(221, 16, 16);
-              transition: 1.0s;
+              @include submit-btn;
             }
           }
         .tech-image{
@@ -63,13 +48,7 @@
 
 @media screen and (max-width: 768px){
   .body{
-    position: relative;
-    min-height: 100%;
-    background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-    font-size: 14px;
-    color: #333;
-    line-height: 1.5;
+    @include bodyTemp;
     .last-box{
       height: 438px;
       max-width: 100%;
@@ -81,7 +60,7 @@
         border-bottom:1.5px solid #f5f5f5;
         h2{
           line-height: 58px;
-          font-size: 22px;
+          font-size: 18px;
           font-weight: bolder;
           text-align: center;
         }
@@ -101,16 +80,7 @@
             }
             .go-ahead{
               margin-top: 30px;
-              background-color: #ea352d;
-              color: white;
-              width: 343px;
-              height: 50px;
-              font-size: 14px;
-              cursor: pointer;
-            }
-            .go-ahead:hover{
-              background-color: rgb(221, 16, 16);
-              transition: 1.0s;
+              @include submit-btn;
             }
           }
         .tech-image{
@@ -121,5 +91,3 @@
     }
   }
 }
-
-
