フッターviewの重複箇所削除

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,5 +1,5 @@
 .profile-main{
-  height: 568px;
+  height: 700px;
   margin: 40px;
   .both-content{
     display:inline-block;
@@ -76,4 +76,7 @@
     padding: 40px 16px;
     background-color: #fff;
   }
+}
+.body{
+  text-align: center;
 }
