--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,17 @@
-@import "reset";
+// @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "font-awesome-sprockets";
-@import "mixin-signup";
-@import "clearfix";
-@import "header";
-@import "footer";
-@import "side-barMypage";
-@import "home";
-@import "profile";
+@import "module/reset";
+@import "module/mixin-signup";
+@import "module/clearfix";
+@import "top/header";
+@import "top/footer";
+@import "top/home";
+@import "user/side-barMypage";
+@import "user/profile";
 @import "user_info_register";
-@import "header-login";
-@import "footer-login";
-@import "header-signupBar";
-@import "login-header";
-@import "product-details";
+@import "devise/header-login";
+@import "devise/footer-login";
+@import "devise/header-signupBar";
+@import "devise/login-header";
+@import "product/product-details";
 
