assetsファイル整理

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,12 +6,22 @@
 @import "top/header";
 @import "top/footer";
 @import "top/home";
-@import "user/side-barMypage";
-@import "user/profile";
-@import "user_info_register";
-@import "devise/header-login";
-@import "devise/footer-login";
+@import "devise/login-header";
+@import "devise/header_footer";
 @import "devise/header-signupBar";
 @import "devise/login-header";
+@import "devise/signup2";
+@import "devise/signup3";
+@import "devise/signup4";
+@import "devise/signup5";
+@import "devise/signup6";
+@import "pay-confirm/paypay";
+@import "devise/login";
+@import "devise/logout";
+@import "devise/pw-resetting";
+@import "user/side-barMypage";
+@import "user/profile";
+@import "user/user_info_register";
+@import "user/mypage";
 @import "product/product-details";
-
+@import "product/product-placing-page";
