--- a/app/assets/stylesheets/devise/signup2.scss
+++ b/app/assets/stylesheets/devise/signup2.scss
@@ -168,7 +168,7 @@
                   width:76px;
                   height: 48px;
                   margin-top:8px;
-                  @include slectType;
+                  @include selectType;
                 }
               }
                 p{
