--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "module/reset";
 @import "module/mixin-signup";
 @import "module/clearfix";
+// @import "module/boxsize";
 @import "top/header";
 @import "top/footer";
 @import "top/home";
