signup2以降のルーティング設定中

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "devise/header_footer";
 @import "devise/header-signupBar";
 @import "devise/login-header";
+@import "devise/signup1";
 @import "devise/signup2";
 @import "devise/signup3";
 @import "devise/signup4";
