--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -32,7 +32,7 @@
         .main-bottom
           .main-bottom-box
             %ul.main-bottom-box__textBox-mail
-              = link_to'' , class:'link-mail' do
+              = link_to signup2_users_path, class:'link-mail' do
                 =fa_icon 'envelope'
                 %li.text
                   メールアドレスで登録する
