--- a/app/views/signup/signup6.html.haml
+++ b/app/views/signup/signup6.html.haml
@@ -32,4 +32,4 @@
           =link_to "" do
             =f.button "メルカリをはじめる", class: "go-ahead"
       =image_tag "background/tech.jpg", class: "tech-image"
-  =render "footer-login"
+  //=render "footer-login"
