--- a/app/views/signup/signup3.html.haml
+++ b/app/views/signup/signup3.html.haml
@@ -33,10 +33,10 @@
                 携帯電話の番号
               %input.tellNumber-info{placeholder: "携帯電話の番号を入力", value: ""}/
               %p 本人確認のため、携帯電話のSMS(ショートメッセージサービス)を利用して認証を行います。
-            =link_to"" do
+            =link_to signup4_signup_index_path do
               =f.button "SMSを送信する", class: "go-ahead"
             %p ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
             =link_to "", class: "link-for-user-info" do
               電話番号の確認が必要な理由
               =fa_icon'chevron-right'
-  =render "footer-login"
+  //=render "footer-login"
