--- a/app/views/signup/signup4.html.haml
+++ b/app/views/signup/signup4.html.haml
@@ -56,7 +56,7 @@
               %span.must-content
                 必須
               .select-prefectures
-                =render "option-prefectures"
+                //=render "option-prefectures"
             .form-group
               %label.municipality-new
                 市町村
@@ -81,6 +81,6 @@
               %span.nini-content
                 任意
               %input.tellNum-info{placeholder: "09012345678", value: ""}/
-            =link_to"" do
+            =link_to signup5_signup_index_path do
               =f.button "次へ進む", class: "go-ahead4"
-  =render "footer-login"
+  //=render "footer-login"
