--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -44,16 +44,16 @@
               %span.must-content
                 必須
               .select-parrent
-                =render "option-birthMonth"
+                //=render "option-birthMonth"
             .form-group-credit
               %label.municipality-new
                 セキュリティコード
               %span.must-content
                 必須
               %input.password-info{placeholder: "カード背面4桁もしくは3桁の番号", value: ""}/
-            =link_to "" do
+            =link_to signup6_signup_index_path do
               =f.button "次へ進む", class: "go-ahead"
             =link_to "", class: "link-for-user-info" do
               カード裏面の番号とは？
               =fa_icon'chevron-right'
-  =render "footer-login"
+  //=render "footer-login"
