ユーザー登録画面切り替わり確認2

--- a/app/views/signup/signup6.html.haml
+++ b/app/views/signup/signup6.html.haml
@@ -29,7 +29,7 @@
         %p ありがとうございます。
         %p 会員登録が完了しました。
         .formbox
-          =link_to "" do
+          =link_to root_path do
             =f.button "メルカリをはじめる", class: "go-ahead"
       =image_tag "background/tech.jpg", class: "tech-image"
   //=render "footer-login"
