topページにプロフィール画面へのリンク仮を追加

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,7 @@
   .top-main
     .top-main-face
       .top-main-face__logo
-        %a.mercaribox{href: "/app/views/devise/registrations/profile"}
+        %a.mercaribox{href: "/mypage/profile"}
           = image_tag "/logo_red.svg", alt: ""
       
       %form.searchbox{action: ""}
