--- a/app/assets/stylesheets/top/home.scss
+++ b/app/assets/stylesheets/top/home.scss
@@ -10,7 +10,7 @@
     background-size: cover;
   }
 }
-.nav {
+.top-nav {
   width: 100%;
   padding: 56px 0px 30px;
   background-color: #fff;
@@ -42,7 +42,7 @@
     justify-content: center;
   }
 }
-.main-content{
+.main-body{
   margin: 0 auto;
   height: 100%;
   max-width: 1020px;
@@ -84,6 +84,7 @@
         width: 20%;
         padding: 10px;
         white-space: nowrap;
+        text-align: left;
         .main-contents-box {
           height: 252px;
           .contents-item {
@@ -106,6 +107,7 @@
               }
             }
             &__index {
+              box-sizing: border-box;
               background-color: #fff;
               color: #222;
               font-size: 14px;
